--- a/Pipfile
+++ b/Pipfile
@@ -8,8 +8,10 @@ numpy = "*"
 gym = "*"
 pybullet = "*"
 torch = "*"
+stable-baselines3 = "*"
+tensorboard = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.8"
+python_version = "3.9"
